// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render LabMetForm for adding method with empty inputs 1`] = `
<div>
  <div
    className="flex-container"
  >
    <button
      name="internal"
      onClick={[Function]}
    >
      Interni
    </button>
    <button
      name="external"
      onClick={[Function]}
    >
      Externi
    </button>
  </div>
  <p>
    This is from test form
  </p>
  <form
    className="fcrw"
    onSubmit={[Function]}
  >
    <label>
      Nazev testu
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Synonyma
    </label>
    <input
      name="syn"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Kde se dela
    </label>
    <input
      list="where"
      name="where"
      onChange={[Function]}
      value=""
    />
    <datalist
      id="where"
    >
      <option
        value="SNO"
      />
      <option
        value="Krnov"
      />
    </datalist>
    <label>
      Nazev v Akordu
    </label>
    <input
      name="nameAk"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Skupiny v akordu
    </label>
    <input
      name="groupAk"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Odber
    </label>
    <input
      name="draw"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Preanalytika
    </label>
    <input
      name="preanal"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Poznamka
    </label>
    <input
      name="note"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Metodika
    </label>
    <input
      name="metodics"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Jednotka
    </label>
    <input
      name="unit"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Odbornost
    </label>
    <input
      name="expertise"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div>
      <label>
        Cas rutina
      </label>
      <input
        name="rutTime"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Statim
      </label>
      <input
        name="statCare"
        onChange={[Function]}
        type="checkbox"
        value={false}
      />
      <label>
        Pohotovost
      </label>
      <input
        name="erCare"
        onChange={[Function]}
        type="checkbox"
        value={false}
      />
      <label>
        Dohlaska
      </label>
      <input
        name="additionalOrder"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Poznamka k dostupnosti
      </label>
      <input
        name="responseNote"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Snizujici interference
      </label>
      <input
        name="interfereDown"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Zvysujici interference
      </label>
      <input
        name="interfereUp"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Fyziologicka variabilita
      </label>
      <input
        name="physVar"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Biologicky polocas
      </label>
      <input
        name="bioHalfLife"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <button>
      Submitvoe
    </button>
  </form>
  <div>
    <form
      onSubmit={[Function]}
    >
      <label>
        Referencni meze
      </label>
      <input
        name="sex"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="age"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="range"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button>
        Pridat ref mez
      </button>
    </form>
  </div>
</div>
`;

exports[`should render LabMetForm for editing method with filled inputs 1`] = `
<div>
  <div
    className="flex-container"
  >
    <button
      name="internal"
      onClick={[Function]}
    >
      Interni
    </button>
    <button
      name="external"
      onClick={[Function]}
    >
      Externi
    </button>
  </div>
  <p>
    This is from test form
  </p>
  <form
    className="fcrw"
    onSubmit={[Function]}
  >
    <label>
      Nazev testu
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value="CYFRA"
    />
    <label>
      Synonyma
    </label>
    <input
      name="syn"
      onChange={[Function]}
      type="text"
      value="cyp je to"
    />
    <label>
      Kde se dela
    </label>
    <input
      list="where"
      name="where"
      onChange={[Function]}
      value="Krnov"
    />
    <datalist
      id="where"
    >
      <option
        value="SNO"
      />
      <option
        value="Krnov"
      />
    </datalist>
    <label>
      Nazev v Akordu
    </label>
    <input
      name="nameAk"
      onChange={[Function]}
      type="text"
      value="S_EXT_CYFRA"
    />
    <label>
      Skupiny v akordu
    </label>
    <input
      name="groupAk"
      onChange={[Function]}
      type="text"
      value="EXT_VSE"
    />
    <label>
      Odber
    </label>
    <input
      name="draw"
      onChange={[Function]}
      type="text"
      value="sg"
    />
    <label>
      Preanalytika
    </label>
    <input
      name="preanal"
      onChange={[Function]}
      type="text"
      value="standard"
    />
    <label>
      Poznamka
    </label>
    <input
      name="note"
      onChange={[Function]}
      type="text"
      value="baf"
    />
    <label>
      Metodika
    </label>
    <input
      name="metodics"
      onChange={[Function]}
      type="text"
      value="CLIA"
    />
    <label>
      Jednotka
    </label>
    <input
      name="unit"
      onChange={[Function]}
      type="text"
      value="UI/ml"
    />
    <label>
      Odbornost
    </label>
    <input
      name="expertise"
      onChange={[Function]}
      type="text"
      value="801"
    />
    <div>
      <label>
        Kdy odjizdi externi
      </label>
      <input
        name="whenExtTransport"
        onChange={[Function]}
        type="text"
        value="po-pa"
      />
      <label>
        Jak casto externi
      </label>
      <input
        name="extHowOften"
        onChange={[Function]}
        type="text"
        value="denne"
      />
      <label>
        Odezva externi
      </label>
      <input
        name="extResponse"
        onChange={[Function]}
        type="text"
        value="3 dny"
      />
      <label>
        Kdo posila z lab
      </label>
      <input
        name="parcelWho"
        onChange={[Function]}
        type="text"
        value="RIA"
      />
      <label>
        Lab preanalytika
      </label>
      <input
        name="parcelPreanal"
        onChange={[Function]}
        type="text"
        value="stocit stahnout"
      />
      <label>
        Lab poznamka
      </label>
      <input
        name="parcelNote"
        onChange={[Function]}
        type="text"
        value="nesrat se s tim"
      />
    </div>
    <button>
      Submitvoe
    </button>
  </form>
</div>
`;

exports[`should render error when name or where is missing on form submission 1`] = `
<div>
  <div
    className="flex-container"
  >
    <button
      name="internal"
      onClick={[Function]}
    >
      Interni
    </button>
    <button
      name="external"
      onClick={[Function]}
    >
      Externi
    </button>
  </div>
  <p>
    This is from test form
  </p>
  <form
    className="fcrw"
    onSubmit={[Function]}
  >
    <label>
      Nazev testu
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Synonyma
    </label>
    <input
      name="syn"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Kde se dela
    </label>
    <input
      list="where"
      name="where"
      onChange={[Function]}
      value=""
    />
    <datalist
      id="where"
    >
      <option
        value="SNO"
      />
      <option
        value="Krnov"
      />
    </datalist>
    <label>
      Nazev v Akordu
    </label>
    <input
      name="nameAk"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Skupiny v akordu
    </label>
    <input
      name="groupAk"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Odber
    </label>
    <input
      name="draw"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Preanalytika
    </label>
    <input
      name="preanal"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Poznamka
    </label>
    <input
      name="note"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Metodika
    </label>
    <input
      name="metodics"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Jednotka
    </label>
    <input
      name="unit"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Odbornost
    </label>
    <input
      name="expertise"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div>
      <label>
        Cas rutina
      </label>
      <input
        name="rutTime"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Statim
      </label>
      <input
        name="statCare"
        onChange={[Function]}
        type="checkbox"
        value={false}
      />
      <label>
        Pohotovost
      </label>
      <input
        name="erCare"
        onChange={[Function]}
        type="checkbox"
        value={false}
      />
      <label>
        Dohlaska
      </label>
      <input
        name="additionalOrder"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Poznamka k dostupnosti
      </label>
      <input
        name="responseNote"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Snizujici interference
      </label>
      <input
        name="interfereDown"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Zvysujici interference
      </label>
      <input
        name="interfereUp"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Fyziologicka variabilita
      </label>
      <input
        name="physVar"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Biologicky polocas
      </label>
      <input
        name="bioHalfLife"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <button>
      Submitvoe
    </button>
  </form>
  <div>
    <form
      onSubmit={[Function]}
    >
      <label>
        Referencni meze
      </label>
      <input
        name="sex"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="age"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="range"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button>
        Pridat ref mez
      </button>
    </form>
  </div>
</div>
`;

exports[`should render error when name or where is missing on form submission 2`] = `
<div>
  <h2>
    Vyplň povinné položky Název a kde se to dělá
  </h2>
  <div
    className="flex-container"
  >
    <button
      name="internal"
      onClick={[Function]}
    >
      Interni
    </button>
    <button
      name="external"
      onClick={[Function]}
    >
      Externi
    </button>
  </div>
  <p>
    This is from test form
  </p>
  <form
    className="fcrw"
    onSubmit={[Function]}
  >
    <label>
      Nazev testu
    </label>
    <input
      name="name"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Synonyma
    </label>
    <input
      name="syn"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Kde se dela
    </label>
    <input
      list="where"
      name="where"
      onChange={[Function]}
      value=""
    />
    <datalist
      id="where"
    >
      <option
        value="SNO"
      />
      <option
        value="Krnov"
      />
    </datalist>
    <label>
      Nazev v Akordu
    </label>
    <input
      name="nameAk"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Skupiny v akordu
    </label>
    <input
      name="groupAk"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Odber
    </label>
    <input
      name="draw"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Preanalytika
    </label>
    <input
      name="preanal"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Poznamka
    </label>
    <input
      name="note"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Metodika
    </label>
    <input
      name="metodics"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Jednotka
    </label>
    <input
      name="unit"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label>
      Odbornost
    </label>
    <input
      name="expertise"
      onChange={[Function]}
      type="text"
      value=""
    />
    <div>
      <label>
        Cas rutina
      </label>
      <input
        name="rutTime"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Statim
      </label>
      <input
        name="statCare"
        onChange={[Function]}
        type="checkbox"
        value={false}
      />
      <label>
        Pohotovost
      </label>
      <input
        name="erCare"
        onChange={[Function]}
        type="checkbox"
        value={false}
      />
      <label>
        Dohlaska
      </label>
      <input
        name="additionalOrder"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Poznamka k dostupnosti
      </label>
      <input
        name="responseNote"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Snizujici interference
      </label>
      <input
        name="interfereDown"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Zvysujici interference
      </label>
      <input
        name="interfereUp"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Fyziologicka variabilita
      </label>
      <input
        name="physVar"
        onChange={[Function]}
        type="text"
        value=""
      />
      <label>
        Biologicky polocas
      </label>
      <input
        name="bioHalfLife"
        onChange={[Function]}
        type="text"
        value=""
      />
    </div>
    <button>
      Submitvoe
    </button>
  </form>
  <div>
    <form
      onSubmit={[Function]}
    >
      <label>
        Referencni meze
      </label>
      <input
        name="sex"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="age"
        onChange={[Function]}
        type="text"
        value=""
      />
      <input
        name="range"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button>
        Pridat ref mez
      </button>
    </form>
  </div>
</div>
`;
